--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -120,9 +120,9 @@
 				 <span>背景 Background</span>  
 			</a>
 			<p class="panel-block m-css3-background">
-			    <a>background</a>
-			    <a>background-color</a>
-			    <a>background-image</a>
+			    <a href="branchhtmls/background.html">background</a>
+			    <a href="branchhtmls/background-color.html">background-color</a>
+			    <a href="branchhtmls/background-image.html">background-image</a>
 			    <a>background-repeat</a>
 			    <a>background-attachment</a>
 			     <a>background-position</a>
