--- a/htmls/branchhtmls/background-attachment.html
+++ b/htmls/branchhtmls/background-attachment.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-image</title>
+		<title>background-attachment</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-image</strong>
+				<strong class="has-text-info">background-attachment</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-image：</strong><span>&lt;bg-image&gt; [ , &lt;bg-image&gt; ]*<sup class="m-css3-super">css3</sup></span>
+						<strong>background-attachment：</strong><span>&lt;attachment&gt; [ , &lt;attachment&gt; ]*<sup class="m-css3-super">css3</sup></span>
 					</li>
 					<li>
-						<strong>&lt;bg-image&gt;</strong><span> = &lt;image&gt; | none</span>
+						<strong>&lt;attachment&gt;</strong><span> = fixed | scroll | local <sup class="m-css3-super">css3</sup></span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">none</span>
+						<strong>默认值：</strong><span class="m-border-bg">scroll</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
@@ -58,10 +58,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>none:</strong><span>无背景图。</span>
+						<strong>fixed:</strong><span>背景图像相对于窗体固定。</span>
 					</li>
 					<li>
-						<strong>&lt;image&gt;:</strong><span>使用绝对或相对地址指或者创建渐变色来确定图像。</span>
+						<strong>scroll:</strong><span>背景图像相对于元素固定，也就是说当元素内容滚动时背景图像不会跟着滚动，因为背景图像总是要跟着元素本身。但会随元素的祖先元素或窗体一起滚动。</span>
+					</li>
+					<li>
+						<strong>local:</strong><span>背景图像相对于元素内容固定，也就是说当元素随元素滚动时背景图像也会跟着滚动，因为背景图像总是要跟着内容。（CSS3）。</span>
 					</li>
 				</ul>
 			</div>
@@ -71,11 +74,9 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像。</strong>
+						<strong>设置或检索背景图像是随对象内容滚动还是固定的。必须先指定 &lt;' background-image '&gt; 属性。</strong>
 					</li>
-					<li>如果定义了多组背景图，且背景图之间有重叠，写在前面的将会盖在写在后面的图像之上。</li>
-					<li>如果设置了 &lt;' background-image '&gt;，同时也建议设置&lt;' background-color '&gt; 用于当背景图像不可见时保持与文本颜色有一定的对比度。</li>
-					<li>对应的脚本特性为backgroundImage。</li>
+					<li>对应的脚本特性为backgroundAttachment。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -108,20 +109,22 @@
 						     <tr>
 						     	<th>Basic Support</th>
 						     	<td class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">2.0+</td>
+						     	<td class="m-green">2.0+</td>
 						     	<td rowspan="3" class="m-green">4.0+</td>
 						     	<td rowspan="3" class="m-green">3.1+</td>
-						     	<td rowspan="3" class="m-green">3.5+</td>
+						     	<td rowspan="3" class="m-green">15.0+</td>
 						     	<td rowspan="3" class="m-green">3.2+</td>
 						     	<td rowspan="3" class="m-green">2.1+</td>
 						     	<td rowspan="3" class="m-green">18.0+</td>
 						     </tr>
 						     <tr>
-						     	<th rowspan="2">Multiple image多组图像</th>
+						     	<th rowspan="2">local</th>
 						     	<td class="m-red">6.0-8.0</td>
+						     	<td class="m-red">2.0-24.0</td>
 						     </tr>
 						     <tr>
 						     	<td class="m-green">9.0+</td>
+						     	<td class="m-green">25.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -140,45 +143,54 @@
 <title>background-color_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-.test strong {
-	font-size: 16px;
-}
-.test .url p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg);
-	background-repeat: no-repeat;
-}
-.test .gradient p {
-	height: 100px;
-	background-image: linear-gradient(to top, #45B5DA, #0382AD);
-}
-.test .multiple p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg),
-					  url(skin/p_103x196_2.jpg),
-					  url(skin/p_103x196_3.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0,
-						 100px 0,
-						 200px 0;
-}
+	body {
+		background-image: url(skin/p_103x196_1.jpg);
+		background-repeat: no-repeat;
+		background-position: 50% 200px;
+		background-attachment: fixed;
+	}
 </style>
 </head>
 <body>
-	<ul class="test">
-		<li class="url">
-			<strong>使用url()引入背景图像</strong>
-			<p>使用url()可以是绝对或相对路径</p>
-		</li>
-		<li class="gradient">
-			<strong>使用渐变绘制背景图像</strong>
-			<p>渐变种类有: linear-gradient, radial-gradient, repeating-linear-gradient, repeating-radial-gradient</p>
-		</li>
-		<li class="multiple">
-			<strong>多重背景图</strong>
-			<p>多重背景图可以是url()或gradient的混合方式</p>
-		</li>
-	</ul>
+	<p>背景图像不随窗体内容滚动始终固定</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>文字内容</p>
+	<p>背景图像不随窗体内容滚动始终固定</p>
 </body>
 </html>
 				</textarea>
