--- a/htmls/branchhtmls/background-clip.html
+++ b/htmls/branchhtmls/background-clip.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-image</title>
+		<title>background-clip</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-image</strong>
+				<strong class="has-text-info">background-clip</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-image：</strong><span>&lt;bg-image&gt; [ , &lt;bg-image&gt; ]*<sup class="m-css3-super">css3</sup></span>
+						<strong>background-clip：</strong><span>&lt;box&gt; [ , &lt;box&gt; ]*</span>
 					</li>
 					<li>
-						<strong>&lt;bg-image&gt;</strong><span> = &lt;image&gt; | none</span>
+						<strong>&lt;box&gt;</strong><span> = border-box | padding-box | content-box | text</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">none</span>
+						<strong>默认值：</strong><span class="m-border-bg">border-box</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
@@ -58,10 +58,16 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>none:</strong><span>无背景图。</span>
+						<strong>padding-box:</strong><span>从padding区域（不含padding）开始向外裁剪背景。</span>
 					</li>
 					<li>
-						<strong>&lt;image&gt;:</strong><span>使用绝对或相对地址指或者创建渐变色来确定图像。</span>
+						<strong>border-box:</strong><span>从border区域（不含border）开始向外裁剪背景。</span>
+					</li>
+					<li>
+						<strong>content-box:</strong><span>从content区域开始向外裁剪背景。</span>
+					</li>
+					<li>
+						<strong>text:</strong><span>从前景内容的形状（比如文字）作为裁剪区域向外裁剪，如此即可实现使用背景作为填充色之类的遮罩效果。遮罩效果 See with Webkit</span>
 					</li>
 				</ul>
 			</div>
@@ -71,11 +77,9 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像。</strong>
+						<strong>指定对象的背景图像向外裁剪的区域。</strong>
 					</li>
-					<li>如果定义了多组背景图，且背景图之间有重叠，写在前面的将会盖在写在后面的图像之上。</li>
-					<li>如果设置了 &lt;' background-image '&gt;，同时也建议设置&lt;' background-color '&gt; 用于当背景图像不可见时保持与文本颜色有一定的对比度。</li>
-					<li>对应的脚本特性为backgroundImage。</li>
+					<li>对应的脚本特性为backgroundClip。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,22 +110,28 @@
 						  </thead>
 						  <tbody>
 						     <tr>
-						     	<th>Basic Support</th>
-						     	<td class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">2.0+</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">3.1+</td>
-						     	<td rowspan="3" class="m-green">3.5+</td>
-						     	<td rowspan="3" class="m-green">3.2+</td>
-						     	<td rowspan="3" class="m-green">2.1+</td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
-						     </tr>
-						     <tr>
-						     	<th rowspan="2">Multiple image多组图像</th>
+						     	<th rowspan="3">Basic Support</th>
 						     	<td class="m-red">6.0-8.0</td>
+						     	<td class="m-red">2.0-3.5</td>
+						     	<td rowspan="4" class="m-green">4.0+</td>
+						     	<td rowspan="4" class="m-green">6.0+</td>
+						     	<td rowspan="4" class="m-green">15.0+</td>
+						     	<td rowspan="4" class="m-green">6.0+</td>
+						     	<td class="m-green">2.1-2.3<sup>-webkit-</sup></td>
+						     	<td rowspan="4" class="m-green">18.0+</td>
 						     </tr>
 						     <tr>
-						     	<td class="m-green">9.0+</td>
+						     	<td rowspan="2" class="m-green">9.0+</td>
+						     	<td class="m-green">3.6<sup>-moz-</sup></td>
+						     	<td rowspan="3" class="m-green">3.0+</td>
+						     </tr>
+						     <tr>
+						     	<td class="m-green">4.0+</td>
+						     </tr>
+						     <tr>
+						     	<th>text<sup>#1</sup></th>
+						     	<td class="m-red">6.0-11.0</td>
+						     	<td class="m-red">2.0-38.0</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -140,43 +150,33 @@
 <title>background-color_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-.test strong {
-	font-size: 16px;
-}
-.test .url p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg);
-	background-repeat: no-repeat;
-}
-.test .gradient p {
-	height: 100px;
-	background-image: linear-gradient(to top, #45B5DA, #0382AD);
-}
-.test .multiple p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg),
-					  url(skin/p_103x196_2.jpg),
-					  url(skin/p_103x196_3.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0,
-						 100px 0,
-						 200px 0;
-}
+	h1{font-size:20px;}
+	h2{font-size:16px;}
+	p{width:200px;height:200px;margin:0;padding:20px;border:10px dashed #666;background:#aaa url(skin/p_103x196_1.jpg) no-repeat;}
+	.border-box p{background-clip:border-box;}
+	.padding-box p{background-clip:padding-box;}
+	.content-box p{background-clip:content-box;}
+	.text p{width:auto;height:auto;background-repeat:repeat;-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-weight:bold;font-size:120px;}
 </style>
 </head>
 <body>
+	<h1>background-clip</h1>
 	<ul class="test">
-		<li class="url">
-			<strong>使用url()引入背景图像</strong>
-			<p>使用url()可以是绝对或相对路径</p>
+		<li class="border-box">
+			<h2>border-box</h2>
+			<p>从border区域（不含border）开始向外裁剪背景</p>
 		</li>
-		<li class="gradient">
-			<strong>使用渐变绘制背景图像</strong>
-			<p>渐变种类有: linear-gradient, radial-gradient, repeating-linear-gradient, repeating-radial-gradient</p>
+		<li class="padding-box">
+			<h2>padding-box</h2>
+			<p>从padding区域（不含padding）开始向外裁剪背景</p>
 		</li>
-		<li class="multiple">
-			<strong>多重背景图</strong>
-			<p>多重背景图可以是url()或gradient的混合方式</p>
+		<li class="content-box">
+			<h2>content-box</h2>
+			<p>从content区域开始向外裁剪背景</p>
+		</li>
+		<li class="text">
+			<h2>text</h2>
+			<p>从前景内容的形状作为裁剪区域向外裁剪背景</p>
 		</li>
 	</ul>
 </body>
