--- a/htmls/branchhtmls/background-position.html
+++ b/htmls/branchhtmls/background-position.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-image</title>
+		<title>background-position</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-image</strong>
+				<strong class="has-text-info">background-position</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-image：</strong><span>&lt;bg-image&gt; [ , &lt;bg-image&gt; ]*<sup class="m-css3-super">css3</sup></span>
+						<strong>background-position：</strong><span>&lt;position&gt; [ , &lt;position&gt; ]*<sup class="m-css3-super">css3</sup></span>
 					</li>
 					<li>
-						<strong>&lt;bg-image&gt;</strong><span> = &lt;image&gt; | none</span>
+						<strong>&lt;position&gt;</strong><span> = [ left | center | right | top | bottom | <percentage> | <length> ] | [ left | center | right | <percentage> | <length> ] [ top | center | bottom | <percentage> | <length> ] | [ center | [ left | right ] [ <percentage> | <length> ]? ] && [ center | [ top | bottom ] [ <percentage> | <length> ]? ]</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">none</span>
+						<strong>默认值：</strong><span class="m-border-bg">0% 0%,效果等同于left top</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
@@ -45,7 +45,7 @@
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>否</span>
+						<strong>动画性：</strong><span>是</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
@@ -58,10 +58,25 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>none:</strong><span>无背景图。</span>
+						<strong>&lt;percentage&gt;:</strong><span>用百分比指定背景图像填充的位置。可以为负值。</span>
 					</li>
 					<li>
-						<strong>&lt;image&gt;:</strong><span>使用绝对或相对地址指或者创建渐变色来确定图像。</span>
+						<strong>&lt;length&gt;:</strong><span>用长度值指定背景图像填充的位置。可以为负值。</span>
+					</li>
+					<li>
+						<strong>center:</strong><span>背景图像横向和纵向居中。</span>
+					</li>
+					<li>
+						<strong>left:</strong><span>背景图像在横向上填充从左边开始。</span>
+					</li>
+					<li>
+						<strong>right:</strong><span>背景图像在横向上填充从右边开始。</span>
+					</li>
+					<li>
+						<strong>top:</strong><span>背景图像在纵向上填充从顶部开始。</span>
+					</li>
+					<li>
+						<strong>bottom:</strong><span>背景图像在纵向上填充从底部开始。</span>
 					</li>
 				</ul>
 			</div>
@@ -71,11 +86,35 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像。</strong>
+						<strong>设置或检索对象的背景图像位置。必须先指定 &lt;' background-image '&gt; 属性。</strong>
 					</li>
-					<li>如果定义了多组背景图，且背景图之间有重叠，写在前面的将会盖在写在后面的图像之上。</li>
-					<li>如果设置了 &lt;' background-image '&gt;，同时也建议设置&lt;' background-color '&gt; 用于当背景图像不可见时保持与文本颜色有一定的对比度。</li>
-					<li>对应的脚本特性为backgroundImage。</li>
+					<li>
+						<span>该属性提供2个参数值（CSS3中已允许提供4个值）。</span>
+					</li>
+					<li>
+						<span>如果提供四个，每个&lt;percentage&gt;或&lt;length&gt;偏移前都必须跟着一个关键字（即left | center | right | top | bottom），偏移量相对关键字位置进行偏移。</span>
+					</li>
+					<li>
+						<a></a>
+						<a class="panel-block m-background-blue">
+							<strong>缩写方式：</strong>
+						</a>
+							<pre class="m-border-blue">background:url(test1.jpg) no-repeat right 20px bottom 20px;</pre>
+					</li>
+					<li><strong>你也可以设置3个参数值：</strong></li>
+					<li>
+						<a></a>
+						<a class="panel-block m-background-blue">
+							<strong>拆分方式：</strong>
+						</a>
+							<pre class="m-border-blue">background:url(test1.jpg) no-repeat left bottom 10px;</pre>
+						<a class="panel-block m-background-blue has-text-danger">
+							<span>要注意的是：设置3个或4个值，偏移量前必须有关键字。也就是说，形如："10px bottom 20px" ，这样的参数设置是错误的，因为10px前面没有关键字。</span>
+						</a>
+					</li>
+					<li>如果提供两个，第一个用于横坐标，第二个用于纵坐标。</li>
+					<li>如果只提供一个，该值将用于横坐标；纵坐标将默认为50%（即center）。</li>
+					<li>对应的脚本特性为backgroundPosition。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -102,26 +141,41 @@
 						      <th class="m-blue">IOS Safari</th>
 						      <th class="m-blue">Android Browser</th>
 						      <th class="m-blue">Android Chrome</th>
+						      <th class="m-blue">Android UC</th>
 						    </tr>
 						  </thead>
 						  <tbody>
 						     <tr>
 						     	<th>Basic Support</th>
 						     	<td class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">2.0+</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">3.1+</td>
-						     	<td rowspan="3" class="m-green">3.5+</td>
-						     	<td rowspan="3" class="m-green">3.2+</td>
-						     	<td rowspan="3" class="m-green">2.1+</td>
-						     	<td rowspan="3" class="m-green">18.0+</td>
+						     	<td class="m-green">2.0+</td>
+						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">3.1+</td>
+						     	<td rowspan="3" class="m-green">15.0+</td>
+						     	<td class="m-green">3.2+</td>
+						     	<td class="m-green">2.1+</td>
+						     	<td class="m-green">18.0+</td>
+						     	<td class="m-green">7.0+</td>
 						     </tr>
 						     <tr>
-						     	<th rowspan="2">Multiple image多组图像</th>
+						     	<th rowspan="2">3-4个参数以边界作参考偏移</th>
 						     	<td class="m-red">6.0-8.0</td>
+						     	<td class="m-red">2.0-12.0</td>
+						     	<td class="m-red">4.0-24.0</td>
+						     	<td class="m-red">3.1-6.1</td>
+						     	<td class="m-red">3.2-6.1</td>
+						     	<td class="m-red">2.1-4.3</td>
+						     	<td class="m-red">18.0-24.0</td>
+						     	<td rowspan="2" class="m-red">7.0-9.9</td>
 						     </tr>
 						     <tr>
 						     	<td class="m-green">9.0+</td>
+						     	<td class="m-green">13.0+</td>
+						     	<td class="m-green">25.0+</td>
+						     	<td class="m-green">7.0+</td>
+						     	<td class="m-green">7.0+</td>
+						     	<td class="m-green">4.4+</td>
+						     	<td class="m-green">25.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -140,45 +194,18 @@
 <title>background-color_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-.test strong {
-	font-size: 16px;
-}
-.test .url p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg);
-	background-repeat: no-repeat;
-}
-.test .gradient p {
-	height: 100px;
-	background-image: linear-gradient(to top, #45B5DA, #0382AD);
-}
-.test .multiple p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg),
-					  url(skin/p_103x196_2.jpg),
-					  url(skin/p_103x196_3.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0,
-						 100px 0,
-						 200px 0;
-}
+	.test {
+		border: 1px solid #000;
+		width: 400px;
+		height: 500px;
+		background-image: url(skin/p_103x196_1.jpg);
+		background-repeat: no-repeat;
+		background-position: center;
+	}
 </style>
 </head>
 <body>
-	<ul class="test">
-		<li class="url">
-			<strong>使用url()引入背景图像</strong>
-			<p>使用url()可以是绝对或相对路径</p>
-		</li>
-		<li class="gradient">
-			<strong>使用渐变绘制背景图像</strong>
-			<p>渐变种类有: linear-gradient, radial-gradient, repeating-linear-gradient, repeating-radial-gradient</p>
-		</li>
-		<li class="multiple">
-			<strong>多重背景图</strong>
-			<p>多重背景图可以是url()或gradient的混合方式</p>
-		</li>
-	</ul>
+	<div class="test">背景图水平垂直居中</div>
 </body>
 </html>
 				</textarea>
