--- a/htmls/branchhtmls/background-size.html
+++ b/htmls/branchhtmls/background-size.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>background-image</title>
+		<title>background-size</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">background-image</strong>
+				<strong class="has-text-info">background-size</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>background-image：</strong><span>&lt;bg-image&gt; [ , &lt;bg-image&gt; ]*<sup class="m-css3-super">css3</sup></span>
+						<strong>background-size：</strong><span>&lt;bg-size&gt; [ , &lt;big-size&gt; ]*</span>
 					</li>
 					<li>
-						<strong>&lt;bg-image&gt;</strong><span> = &lt;image&gt; | none</span>
+						<strong>&lt;bg-size&gt;</strong><span> = [ &lt;length&gt'' | &lt;percentage&gt; | auto ]{1,2} | cover | contain</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">none</span>
+						<strong>默认值：</strong><span class="m-border-bg">auto</span>
 					</li>
 					<li>
 						<strong>适用于：</strong><span>所有元素</span>
@@ -45,7 +45,7 @@
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>否</span>
+						<strong>动画性：</strong><span>是，除非使用值为关键字</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>指定值</span>
@@ -58,10 +58,19 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>none:</strong><span>无背景图。</span>
+						<strong>&lt;length&gt;</strong><span>用长度值指定背景图像大小。不允许负值。</span>
 					</li>
 					<li>
-						<strong>&lt;image&gt;:</strong><span>使用绝对或相对地址指或者创建渐变色来确定图像。</span>
+						<strong>&lt;percentage&gt;</strong><span>用百分比指定背景图像大小。不允许负值。</span>
+					</li>
+					<li>
+						<strong>auto:</strong><span>背景图像的真实大小。</span>
+					</li>
+					<li>
+						<strong>cover:</strong><span>将背景图像等比缩放到完全覆盖容器，背景图像有可能超出容器。</span>
+					</li>
+					<li>
+						<strong>contain:</strong><span>将背景图像等比缩放到宽度或高度与容器的宽度或高度相等，背景图像始终被包含在容器内。</span>
 					</li>
 				</ul>
 			</div>
@@ -71,11 +80,12 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>设置或检索对象的背景图像。</strong>
+						<strong>检索或设置对象的背景图像的尺寸大小。</strong>
 					</li>
-					<li>如果定义了多组背景图，且背景图之间有重叠，写在前面的将会盖在写在后面的图像之上。</li>
-					<li>如果设置了 &lt;' background-image '&gt;，同时也建议设置&lt;' background-color '&gt; 用于当背景图像不可见时保持与文本颜色有一定的对比度。</li>
-					<li>对应的脚本特性为backgroundImage。</li>
+					<li>该属性提供2个参数值(特性值cover和contain除外)。</li>
+					<li>如果提供两个，第一个用于定义背景图像的宽度，第二个用于定义背景图像的高度。</li>
+					<li>如果只提供一个，该值将用于定义背景图像的宽度，第2个值默认为auto，即高度为auto，此时背景图以提供的宽度作为参照来进行等比缩放。</li>
+					<li>对应的脚本特性为backgroundSize。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -106,22 +116,27 @@
 						  </thead>
 						  <tbody>
 						     <tr>
-						     	<th>Basic Support</th>
-						     	<td class="m-green">6.0+</td>
-						     	<td rowspan="3" class="m-green">2.0+</td>
-						     	<td rowspan="3" class="m-green">4.0+</td>
-						     	<td rowspan="3" class="m-green">3.1+</td>
-						     	<td rowspan="3" class="m-green">3.5+</td>
-						     	<td rowspan="3" class="m-green">3.2+</td>
-						     	<td rowspan="3" class="m-green">2.1+</td>
+						     	<th rowspan="3">Basic Support</th>
+						     	<td class="m-red">6.0-8.0</td>
+						     	<td class="m-red">2.0-3.5</td>
+						     	<td class="m-green">4.0-14.0#1</td>
+						     	<td class="m-green">6.0-6.1#1</td>
+						     	<td rowspan="3" class="m-green">15.0+</td>
+						     	<td class="m-green">6.0-6.1#1#2</td>
+						     	<td class="m-green">2.1-2.3#1<sup>-webkit-</sup></td>
 						     	<td rowspan="3" class="m-green">18.0+</td>
 						     </tr>
 						     <tr>
-						     	<th rowspan="2">Multiple image多组图像</th>
-						     	<td class="m-red">6.0-8.0</td>
+						     	<td rowspan="2" class="m-green">9.0+</td>
+						     	<td class="m-green">3.6<sup>-moz-</sup></td>
+						     	<td rowspan="2" class="m-green">15.0+</td>
+						     	<td rowspan="2" class="m-green">7.0+</td>
+						     	<td rowspan="2" class="m-green">7.0+</td>
+						     	<td class="m-green">3.0-4.3#1</td>
 						     </tr>
 						     <tr>
-						     	<td class="m-green">9.0+</td>
+						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">4.4+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -140,43 +155,28 @@
 <title>background-color_CSS参考手册_web前端开发参考手册系列</title>
 <meta name="author" content="制作者：CarryQiu,联系：187346709@qq.com" />
 <style>
-.test strong {
-	font-size: 16px;
-}
-.test .url p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg);
-	background-repeat: no-repeat;
-}
-.test .gradient p {
-	height: 100px;
-	background-image: linear-gradient(to top, #45B5DA, #0382AD);
-}
-.test .multiple p {
-	padding-top: 200px;
-	background-image: url(skin/p_103x196_1.jpg),
-					  url(skin/p_103x196_2.jpg),
-					  url(skin/p_103x196_3.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 0,
-						 100px 0,
-						 200px 0;
-}
+	h1{font-size:20px;}
+	h2{font-size:16px;}
+	p{border:10px dashed #666;width:300px;height:300px;padding:20px;background:url(skin/p_103x196_1.jpg) no-repeat;}
+	.cover p{background-size:cover;}
+	.contain p{background-size:contain;}
+	.length p{background-size:100px 140px;}
 </style>
 </head>
 <body>
+	<h1>background-size</h1>
 	<ul class="test">
-		<li class="url">
-			<strong>使用url()引入背景图像</strong>
-			<p>使用url()可以是绝对或相对路径</p>
+		<li class="cover">
+			<h2>cover</h2>
+			<p>将背景图像等比缩放到完全覆盖容器，背景图像有可能超出容器。</p>
 		</li>
-		<li class="gradient">
-			<strong>使用渐变绘制背景图像</strong>
-			<p>渐变种类有: linear-gradient, radial-gradient, repeating-linear-gradient, repeating-radial-gradient</p>
+		<li class="contain">
+			<h2>contain</h2>
+			<p>将背景图像等比缩放到宽度或高度与容器的宽度或高度相等，背景图像始终被包含在容器内。</p>
 		</li>
-		<li class="multiple">
-			<strong>多重背景图</strong>
-			<p>多重背景图可以是url()或gradient的混合方式</p>
+		<li class="length">
+			<h2>length</h2>
+			<p>自定义背景图像大小</p>
 		</li>
 	</ul>
 </body>
