--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -123,12 +123,12 @@
 			    <a href="branchhtmls/background.html">background</a>
 			    <a href="branchhtmls/background-color.html">background-color</a>
 			    <a href="branchhtmls/background-image.html">background-image</a>
-			    <a>background-repeat</a>
-			    <a>background-attachment</a>
-			     <a>background-position</a>
-			    <a>background-origin</a>
-			    <a>background-clip</a>
-			    <a>background-size</a>
+			    <a href="branchhtmls/background-repeat.html">background-repeat</a>
+			    <a href="branchhtmls/background-attachment.html">background-attachment</a>
+			     <a href="branchhtmls/background-position.html">background-position</a>
+			    <a href="branchhtmls/background-origin.html">background-origin</a>
+			    <a href="branchhtmls/background-clip.html">background-clip</a>
+			    <a href="branchhtmls/background-size.html">background-size</a>
 			</p>
 				<a class="panel-block m-background">
 				 <span>颜色 Color</span>  
